* Eduke32: Fix sound lockup causing crash
* Eduke32: Mods now load with "-g" to command line
* Loads folders in EDUKE32 folder
* Added option to run from sub-folder (for Total Conversions)

v2.0 Beta 4
* Eduke32: Fix voxels so they are drawn
* Eduke32: Fix game exit crash
* Eduke32: Fix map crash
* Eduke32: Fix console button
* Changed icon

v2.0 Beta 3
Fix memory issue

v2.0 Beta 2
* Changed name to Zeta Touch
* Updated side engine panel visuals
* Fixed Eduke32 music to default and play SF2
* Eduke32 user files now stored in the correct place
* Updated icon
* Fixed invisible walls on Ion Fury


Update Raze to 1.3.1
Update EDuke to fury 2.0
EDuke: Fixed mouse
EDuke: Fixed weapon wheel
EDuke: Fixed keyboard
EDuke: Backspace can clear key config
EDuke: Fixed palette broken on some devices

v1.0
* Updated to Raze 1.1.3
* Default no texture filtering
* Separate touch settings for each game
* Added missing 'Weapon Alt' button

v0.10
* Added Quick Command utility
* Fixed secondary storage
* Added Alt Attack to gamepad


v0.9
* Added gamepad config
* Fixed small font
* Fixed to allow spaces in directory names
* Added version checker

v0.8
* Updated to latest Raze code, ladder problem fixed
* Select mod files
* Save and load mod configurations
* Fix weapon slot 10


v0.7
* Add your own folders to 'addons' to create custom mods
* Change colours
* Fixed a crash on exit
* Fixed version text
* Fixed paths

v0.6
* Updated Raze, fixes Blood ammo graphics
* Fixed custom button assignment in menu
* Fixed icon.png usage
* Added Cryptic Passage
* Added Shadow Warrior addons
* Removed Software mode as does not work
* Updated graphic icons