@@ -111,11 +111,17 @@ public class RazeBaseLauncher implements GameLauncherInterface
                     if (skip)
                         continue;
 
+
                     String pathInfo = f.getAbsolutePath();
                     String fileInfo = Utils.filesInfoString(pathInfo, null, 3);
 
                     SubGame subgame = new SubGame(SUB_DIR + dirName, dirName, dirName, pathName, gameType, R.drawable.raze, pathInfo, fileInfo, WEAPON_WHEEL_NBR);
-                    subgame.setExtraArgs("-game_dir " + quote(pathInfo));
+
+                    if (gameType == RAZE_GAME_EDUKE32 || gameType == RAZE_GAME_IONFURY)
+                        subgame.setExtraArgs("-game_dir " + quote(dirName));
+                    else
+                        subgame.setExtraArgs("-game_dir " + quote(pathInfo));
+
                     availableSubGames.add(subgame);
                 }
             }
