@@ -4,6 +4,6 @@ public class EngineOptionsEduke32_Duke extends EngineOptionsEDuke32
 {
     public EngineOptionsEduke32_Duke()
     {
-        super("duke3d_");
+        super("duke3d_", "eduke32");
     }
 }
