@@ -4,6 +4,6 @@ public class EngineOptionsEduke32_IonFury extends EngineOptionsEDuke32
 {
     public EngineOptionsEduke32_IonFury()
     {
-        super("ionfury_");
+        super("ionfury_", "ionfury");
     }
 }
